[gd_scene load_steps=4 format=3 uid="uid://b5yvuv5stab68"]

[ext_resource type="Script" path="res://Scripts/enemy_glossary.gd" id="1_o3r84"]
[ext_resource type="Texture2D" uid="uid://dvelc1brkk1lq" path="res://images/Ratstanding.png" id="2_4x0c5"]
[ext_resource type="Texture2D" uid="uid://cajs0ydsfqpft" path="res://images/Wolf_White_Background.png" id="3_ydvb6"]

[node name="EnemyGlossary" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_o3r84")

[node name="EnemyGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 996.0
offset_bottom = 1084.0
columns = 4

[node name="slime" type="Button" parent="EnemyGrid"]
layout_mode = 2
icon = ExtResource("2_4x0c5")

[node name="skeleton" type="Button" parent="EnemyGrid"]
layout_mode = 2
icon = ExtResource("3_ydvb6")

[node name="InfoPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1148.0
offset_right = 1921.0
offset_bottom = 1084.0

[node name="EnemyImage" type="TextureRect" parent="InfoPanel"]
layout_mode = 2
stretch_mode = 5

[node name="EnemyName" type="Label" parent="InfoPanel"]
layout_mode = 2

[node name="EnemyType" type="Label" parent="InfoPanel"]
layout_mode = 2

[node name="EnemyDescription" type="Label" parent="InfoPanel"]
layout_mode = 2
